lib/miniaudio/miniaudio.auto.c.v


// MA_API ma_result ma_audio_buffer_ref_unmap(ma_audio_buffer_ref* pAudioBufferRef, ma_uint64 frameCount);    /* Returns MA_AT_END if the end has been reached. This should be considered successful. */
fn C.ma_audio_buffer_ref_unmap(p_audio_buffer_ref &C.ma_audio_buffer_ref, frame_count u64) Result
[inline]
pub fn audio_buffer_ref_unmap(p_audio_buffer_ref &C.ma_audio_buffer_ref, frame_count u64) Result {
	return C.ma_audio_buffer_ref_unmap(p_audio_buffer_ref, frame_count)
}

// MA_API ma_bool32 ma_audio_buffer_ref_at_end(const ma_audio_buffer_ref* pAudioBufferRef);
fn C.ma_audio_buffer_ref_at_end(p_audio_buffer_ref &C.ma_audio_buffer_ref) bool
[inline]
pub fn audio_buffer_ref_at_end(p_audio_buffer_ref &C.ma_audio_buffer_ref) bool {
	return C.ma_audio_buffer_ref_at_end(p_audio_buffer_ref)
}

// MA_API ma_result ma_audio_buffer_ref_get_cursor_in_pcm_frames(const ma_audio_buffer_ref* pAudioBufferRef, ma_uint64* pCursor);
fn C.ma_audio_buffer_ref_get_cursor_in_pcm_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_cursor &u64) Result
[inline]
pub fn audio_buffer_ref_get_cursor_in_pcm_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_cursor &u64) Result {
	return C.ma_audio_buffer_ref_get_cursor_in_pcm_frames(p_audio_buffer_ref, p_cursor)
}

// MA_API ma_result ma_audio_buffer_ref_get_length_in_pcm_frames(const ma_audio_buffer_ref* pAudioBufferRef, ma_uint64* pLength);
fn C.ma_audio_buffer_ref_get_length_in_pcm_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_length &u64) Result
[inline]
pub fn audio_buffer_ref_get_length_in_pcm_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_length &u64) Result {
	return C.ma_audio_buffer_ref_get_length_in_pcm_frames(p_audio_buffer_ref, p_length)
}

// MA_API ma_result ma_audio_buffer_ref_get_available_frames(const ma_audio_buffer_ref* pAudioBufferRef, ma_uint64* pAvailableFrames);
fn C.ma_audio_buffer_ref_get_available_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_available_frames &u64) Result
[inline]
pub fn audio_buffer_ref_get_available_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_available_frames &u64) Result {
	return C.ma_audio_buffer_ref_get_available_frames(p_audio_buffer_ref, p_available_frames)
}

// MA_API ma_audio_buffer_config ma_audio_buffer_config_init(ma_format format, ma_uint32 channels, ma_uint64 sizeInFrames, const void* pData, const ma_allocation_callbacks* pAllocationCallbacks);
fn C.ma_audio_buffer_config_init(format Format, channels u32, size_in_frames u64, p_data voidptr, p_allocation_callbacks &C.ma_allocation_callbacks) C.ma_audio_buffer_config
[inline]
pub fn audio_buffer_config_init(format Format, channels u32, size_in_frames u64, p_data voidptr, p_allocation_callbacks &C.ma_allocation_callbacks) C.ma_audio_buffer_config {
	return C.ma_audio_buffer_config_init(format, channels, size_in_frames, p_data, p_allocation_callbacks)
}

// MA_API ma_result ma_audio_buffer_init(const ma_audio_buffer_config* pConfig, ma_audio_buffer* pAudioBuffer);
fn C.ma_audio_buffer_init(p_config &C.ma_audio_buffer_config, p_audio_buffer &C.ma_audio_buffer) Result
[inline]
pub fn audio_buffer_init(p_config &C.ma_audio_buffer_config, p_audio_buffer &C.ma_audio_buffer) Result {
	return C.ma_audio_buffer_init(p_config, p_audio_buffer)
}

// MA_API ma_result ma_audio_buffer_init_copy(const ma_audio_buffer_config* pConfig, ma_audio_buffer* pAudioBuffer);
fn C.ma_audio_buffer_init_copy(p_config &C.ma_audio_buffer_config, p_audio_buffer &C.ma_audio_buffer) Result
[inline]
pub fn audio_buffer_init_copy(p_config &C.ma_audio_buffer_config, p_audio_buffer &C.ma_audio_buffer) Result {
	return C.ma_audio_buffer_init_copy(p_config, p_audio_buffer)
}

// MA_API ma_result ma_audio_buffer_alloc_and_init(const ma_audio_buffer_config* pConfig, ma_audio_buffer** ppAudioBuffer);  /* Always copies the data. Doesn't make sense to use this otherwise. Use ma_audio_buffer_uninit_and_free() to uninit. */
fn C.ma_audio_buffer_alloc_and_init(p_config &C.ma_audio_buffer_config, pp_audio_buffer &&C.ma_audio_buffer) Result
[inline]
pub fn audio_buffer_alloc_and_init(p_config &C.ma_audio_buffer_config, pp_audio_buffer &&C.ma_audio_buffer) Result {
	return C.ma_audio_buffer_alloc_and_init(p_config, pp_audio_buffer)
}

// MA_API void ma_audio_buffer_uninit(ma_audio_buffer* pAudioBuffer);
fn C.ma_audio_buffer_uninit(p_audio_buffer &C.ma_audio_buffer)
[inline]
pub fn audio_buffer_uninit(p_audio_buffer &C.ma_audio_buffer) {
	C.ma_audio_buffer_uninit(p_audio_buffer)
}

// MA_API void ma_audio_buffer_uninit_and_free(ma_audio_buffer* pAudioBuffer);
fn C.ma_audio_buffer_uninit_and_free(p_audio_buffer &C.ma_audio_buffer)
[inline]
pub fn audio_buffer_uninit_and_free(p_audio_buffer &C.ma_audio_buffer) {
	C.ma_audio_buffer_uninit_and_free(p_audio_buffer)
}

// MA_API ma_uint64 ma_audio_buffer_read_pcm_frames(ma_audio_buffer* pAudioBuffer, void* pFramesOut, ma_uint64 frameCount, ma_bool32 loop);
fn C.ma_audio_buffer_read_pcm_frames(p_audio_buffer &C.ma_audio_buffer, p_frames_out voidptr, frame_count u64, loop bool) u64
[inline]
pub fn audio_buffer_read_pcm_frames(p_audio_buffer &C.ma_audio_buffer, p_frames_out voidptr, frame_count u64, loop bool) u64 {
	return C.ma_audio_buffer_read_pcm_frames(p_audio_buffer, p_frames_out, frame_count,
		loop)
}

// MA_API ma_result ma_audio_buffer_seek_to_pcm_frame(ma_audio_buffer* pAudioBuffer, ma_uint64 frameIndex);
fn C.ma_audio_buffer_seek_to_pcm_frame(p_audio_buffer &C.ma_audio_buffer, frame_index u64) Result
[inline]
pub fn audio_buffer_seek_to_pcm_frame(p_audio_buffer &C.ma_audio_buffer, frame_index u64) Result {
	return C.ma_audio_buffer_seek_to_pcm_frame(p_audio_buffer, frame_index)
}

// MA_API ma_result ma_audio_buffer_map(ma_audio_buffer* pAudioBuffer, void** ppFramesOut, ma_uint64* pFrameCount);
fn C.ma_audio_buffer_map(p_audio_buffer &C.ma_audio_buffer, pp_frames_out &voidptr, p_frame_count &u64) Result
[inline]
pub fn audio_buffer_map(p_audio_buffer &C.ma_audio_buffer, pp_frames_out &voidptr, p_frame_count &u64) Result {
	return C.ma_audio_buffer_map(p_audio_buffer, pp_frames_out, p_frame_count)
}

// MA_API ma_result ma_audio_buffer_unmap(ma_audio_buffer* pAudioBuffer, ma_uint64 frameCount);    /* Returns MA_AT_END if the end has been reached. This should be considered successful. */
fn C.ma_audio_buffer_unmap(p_audio_buffer &C.ma_audio_buffer, frame_count u64) Result
[inline]
pub fn audio_buffer_unmap(p_audio_buffer &C.ma_audio_buffer, frame_count u64) Result {
	return C.ma_audio_buffer_unmap(p_audio_buffer, frame_count)
}

// MA_API ma_bool32 ma_audio_buffer_at_end(const ma_audio_buffer* pAudioBuffer);
fn C.ma_audio_buffer_at_end(p_audio_buffer &C.ma_audio_buffer) bool
[inline]
pub fn audio_buffer_at_end(p_audio_buffer &C.ma_audio_buffer) bool {
	return C.ma_audio_buffer_at_end(p_audio_buffer)
}

// MA_API ma_result ma_audio_buffer_get_cursor_in_pcm_frames(const ma_audio_buffer* pAudioBuffer, ma_uint64* pCursor);
fn C.ma_audio_buffer_get_cursor_in_pcm_frames(p_audio_buffer &C.ma_audio_buffer, p_cursor &u64) Result
[inline]
pub fn audio_buffer_get_cursor_in_pcm_frames(p_audio_buffer &C.ma_audio_buffer, p_cursor &u64) Result {
	return C.ma_audio_buffer_get_cursor_in_pcm_frames(p_audio_buffer, p_cursor)
}

// MA_API ma_result ma_audio_buffer_get_length_in_pcm_frames(const ma_audio_buffer* pAudioBuffer, ma_uint64* pLength);
fn C.ma_audio_buffer_get_length_in_pcm_frames(p_audio_buffer &C.ma_audio_buffer, p_length &u64) Result
[inline]
pub fn audio_buffer_get_length_in_pcm_frames(p_audio_buffer &C.ma_audio_buffer, p_length &u64) Result {
	return C.ma_audio_buffer_get_length_in_pcm_frames(p_audio_buffer, p_length)
}

// MA_API ma_result ma_audio_buffer_get_available_frames(const ma_audio_buffer* pAudioBuffer, ma_uint64* pAvailableFrames);
fn C.ma_audio_buffer_get_available_frames(p_audio_buffer &C.ma_audio_buffer, p_available_frames &u64) Result
[inline]
pub fn audio_buffer_get_available_frames(p_audio_buffer &C.ma_audio_buffer, p_available_frames &u64) Result {
	return C.ma_audio_buffer_get_available_frames(p_audio_buffer, p_available_frames)
}

// MA_API ma_result ma_vfs_open(ma_vfs* pVFS, const char* pFilePath, ma_uint32 openMode, ma_vfs_file* pFile);
fn C.ma_vfs_open(p_v_f_s &C.ma_vfs, p_file_path charptr, open_mode u32, p_file &C.ma_vfs_file) Result
[inline]
pub fn vfs_open(p_v_f_s &C.ma_vfs, p_file_path &byte, open_mode u32, p_file &C.ma_vfs_file) Result {
	return C.ma_vfs_open(p_v_f_s, p_file_path, open_mode, p_file)
}

// MA_API ma_result ma_vfs_open_w(ma_vfs* pVFS, const wchar_t* pFilePath, ma_uint32 openMode, ma_vfs_file* pFile);
fn C.ma_vfs_open_w(p_v_f_s &C.ma_vfs, p_file_path &C.wchar_t, open_mode u32, p_file &C.ma_vfs_file) Result
[inline]
pub fn vfs_open_w(p_v_f_s &C.ma_vfs, p_file_path &C.wchar_t, open_mode u32, p_file &C.ma_vfs_file) Result {
	return C.ma_vfs_open_w(p_v_f_s, p_file_path, open_mode, p_file)
}

// MA_API ma_result ma_vfs_close(ma_vfs* pVFS, ma_vfs_file file);
fn C.ma_vfs_close(p_v_f_s &C.ma_vfs, file C.ma_vfs_file) Result
[inline]
pub fn vfs_close(p_v_f_s &C.ma_vfs, file C.ma_vfs_file) Result {
	return C.ma_vfs_close(p_v_f_s, file)
}

// MA_API ma_result ma_vfs_read(ma_vfs* pVFS, ma_vfs_file file, void* pDst, size_t sizeInBytes, size_t* pBytesRead);
fn C.ma_vfs_read(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_dst voidptr, size_in_bytes usize, p_bytes_read &usize) Result
[inline]
pub fn vfs_read(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_dst voidptr, size_in_bytes usize, p_bytes_read &usize) Result {
	return C.ma_vfs_read(p_v_f_s, file, p_dst, size_in_bytes, p_bytes_read)
}

// MA_API ma_result ma_vfs_write(ma_vfs* pVFS, ma_vfs_file file, const void* pSrc, size_t sizeInBytes, size_t* pBytesWritten);
fn C.ma_vfs_write(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_src voidptr, size_in_bytes usize, p_bytes_written &usize) Result
[inline]
pub fn vfs_write(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_src voidptr, size_in_bytes usize, p_bytes_written &usize) Result {
	return C.ma_vfs_write(p_v_f_s, file, p_src, size_in_bytes, p_bytes_written)
}

// MA_API ma_result ma_vfs_seek(ma_vfs* pVFS, ma_vfs_file file, ma_int64 offset, ma_seek_origin origin);
fn C.ma_vfs_seek(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, offset C.ma_int64, origin C.ma_seek_origin) Result
[inline]
pub fn vfs_seek(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, offset C.ma_int64, origin C.ma_seek_origin) Result {
	return C.ma_vfs_seek(p_v_f_s, file, offset, origin)
}

// MA_API ma_result ma_vfs_tell(ma_vfs* pVFS, ma_vfs_file file, ma_int64* pCursor);
fn C.ma_vfs_tell(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_cursor &C.ma_int64) Result
[inline]
pub fn vfs_tell(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_cursor &C.ma_int64) Result {
	return C.ma_vfs_tell(p_v_f_s, file, p_cursor)
}

// MA_API ma_result ma_vfs_info(ma_vfs* pVFS, ma_vfs_file file, ma_file_info* pInfo);
fn C.ma_vfs_info(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_info &C.ma_file_info) Result
[inline]
pub fn vfs_info(p_v_f_s &C.ma_vfs, file C.ma_vfs_file, p_info &C.ma_file_info) Result {
	return C.ma_vfs_info(p_v_f_s, file, p_info)
}

// MA_API ma_result ma_vfs_open_and_read_file(ma_vfs* pVFS, const char* pFilePath, void** ppData, size_t* pSize, const ma_allocation_callbacks* pAllocationCallbacks);
fn C.ma_vfs_open_and_read_file(p_v_f_s &C.ma_vfs, p_file_path charptr, pp_data &voidptr, p_size &usize, p_allocation_callbacks &C.ma_allocation_callbacks) Result
[inline]
pub fn vfs_open_and_read_file(p_v_f_s &C.ma_vfs, p_file_path &byte, pp_data &voidptr, p_size &usize, p_allocation_callbacks &C.ma_allocation_callbacks) Result {
	return C.ma_vfs_open_and_read_file(p_v_f_s, p_file_path, pp_data, p_size, p_allocation_callbacks)
}
